Cleanup of README.
git-svn-id: https://svn.electricmonk.nl/svn/localenv/trunk@6 4da302af-41e2-4132-b91b-24f0e8d11e2d

--- a/README
+++ b/README
@@ -1,15 +1,15 @@
 localenv
 
-	Bunch-o-scripts that run other scripts or replace/append configuration
-	files depending on the network you're on.
+    Bunch-o-scripts for Linux that run other scripts or replace/append
+    configuration files depending on the network you're on.
 
 
 How does it work?
 
 	localenv-init.d
 
-		init.d script that runs the scripts and configs in /etc/localenv.d/
-		upon system boot.
+        init.d script that runs the scripts and configs in /etc/localenv.d/
+        upon system boot.
 
 	localenv-discover
 
@@ -70,8 +70,8 @@ Configuration
     localenv-confs
 
         localenv-confs configuration files are normal configuration files but
-        with a special header which will be parsed by localenv-confs. The 
-        files should look like this:
+        with a special header which will be parsed by localenv-confs. The files
+        should look like this:
 
 		dest=/path/to/conf/to/replace
 		mode=overwrite (or) mode=append
